--- a/css/style.css
+++ b/css/style.css
@@ -24,55 +24,8 @@ body {
     width: 100%;
     z-index: 1000;
 }
-/*
-#navbarCollapse {
-    position: relative;
-    animation-name: navbarLeft, navbarFadeIn;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-    opacity: 0;
-}
 
-@keyframes navbarLeft{
-    0%{
-        left: -1000px;
-        
 
-    }
-    100% {
-        left: 0px;
-        
-    }
-}
-@keyframes navbarFadeIn {
-    0% {
-         opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-      */
-.fadeIn {
-    opacity: 0;
-    animation-name: fadeIn;
-    animation-duration: 2.5s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in;
-}
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
   
 #welcome-section {
   background: url("../img/welcome1.jpeg") no-repeat;
@@ -201,44 +154,10 @@ article img:hover{
     
 }
 
-/*
-     .fadeInLeft {
-        position: relative;
-        animation-name: fadeInLeft;
-        animation-duration: 1s, 1s;
-        animation-fill-mode: forwards;
-        animation-iteration-count: 1;
-        animation-timing-function: ease-out;
-    }
 
-    @keyframes fadeInLeft{
-        0%{left:-1000px;}
-        100%{left: 0px;}
-    }
-
-
-    .fadeInRight {
-        position: relative;
-        animation-name: fadeInRight;
-        animation-duration: 1s, 1s;
-        animation-fill-mode: forwards;
-        animation-iteration-count: 1;
-        animation-timing-function: ease-out;
-    }
-
-    @keyframes fadeInRight {
-        0% {
-            right: -1000px;
-        }
-
-        100% {
-            right: 0px;
-        }
-    }
-
-
-    */
 footer {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     text-align: center;
     background-color: #242424;
     margin-top: auto;
@@ -249,6 +168,7 @@ footer p{
     padding-bottom: 20px;
     margin: 0;
     font-size: 1.2rem;
+    text-align: center;
     
 }
 
@@ -259,30 +179,7 @@ footer p{
   display: inline-block;
 
   font-size: 33px;
-  padding: 0px 30px;
+  padding: 0px 1rem;
 
 
 }
-/*
-.fadeUp {
-
-    position: relative;
-    animation-name: fadeUp;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: 1;
-
-    
-}
-
-@keyframes fadeUp {
-    0% {
-        bottom: -50px;
-        
-    }
-
-    100% {
-        bottom: 0px;
-    }        
-}
-    */
