--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,14 @@
 
     margin: 0;
     padding: 0;
-    background: black;
+
 
     color: #D9DADB;
     font-family: 'Open Sans', sans-serif;
 }
 body, html {
     height: 100%;
+    width: 100%;
 }
 .highlight {
     color: #0AAAA0;
