--- a/css/styles.css
+++ b/css/styles.css
@@ -1,98 +1,138 @@
-*{
+﻿body {
+
+    
+    background: black;
+
+    color: #D9DADB;
+    font-family: 'Open Sans', sans-serif;
+}
+body, html {
+    height: 100%;
     margin: 0;
     padding: 0;
-
 }
-
-body {
-    background: #81C8FA;
+.highlight {
+    color: #0AAAA0;
 }
-.turn-table{
-    display:inline;
-    margin: 1rem auto;
-    text-align: center;
+canvas {
+   position: fixed;
+   height: 100%;
+   width: 100%;
+   z-index: -1;
+}
+.projects img {
+    width: 100%;
+}
+.app{
+    position: absolute;
+    
+    display: grid;
+    grid-template-columns: 1fr;
+
+   text-align: center;
+   margin: 15% 20%;
     
 }
 
-.turn-table button{
-    outline: none;
-    border: none;
+.about-me{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+.description{
+ padding: 2rem;
+}
+.profile  {
+    
+    height: 10rem;
+    border-radius: 50%;
+}
+
+.profile-section{
+    border-bottom: 1px solid #0AAAA0;
+    padding: 2.5rem;
+}
+
+.adjust, .about-me{
+    margin-top: 0;
+    margin-bottom:0;
+    padding-bottom: 0;
+}
+ul{
+    padding: 0;
+}
+
+.project-btn {
+    margin: 1rem auto;
+    background-color: #0AAAA0;
     color: white;
-    background: black;
-    width: 4rem;
-    height: 3rem;
-margin: 1rem 4rem;
+    width: 8rem;
+    padding: 1rem;
+    border-radius: 100%;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
 }
 li {
     list-style: none;
-    cursor: pointer;
+    display: inline;
 }
-.header {
-    margin: 10% auto 0;
-    font-size: 3rem;
-    text-align: center;
-    font-family:  'Indie Flower', cursive;
+
+.fa {
+    font-size: 2rem;
+    color: #0AAAA0;
+    margin:0 1rem;
 }
-.board {
-    width: 900px;
-    height: 300px;
-    margin: 3% auto;
-    background: #F9A823;
+
+.projects-section .btn {
+    text-decoration: none;
+    color: white;
+    background-color: #0AAAA0;
+
+
+}
+
+
+
+.projects-section{
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr;
-    grid-template-rows: 1fr auto;
-    background-size: cover;
+    grid-template-columns: 1fr;
     grid-gap: 1rem;
-    padding: 1rem;
-    border-radius: 69px;
-    border: 6px solid #D99424;
-    box-shadow: 12px 15px #664828;
+    margin: 2rem;
 }
-
-
 img{
-    width: 100%;
+    border: none;
 }
-.pits {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-gap: 1rem;
-}
-.pits ul {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 1fr;
-    grid-gap: 1rem;
-}
-.pits li {
-
-    background: #DE9927;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    text-align: center;
-    border: 3px solid #664828;
-    box-shadow: inset 0 0 5px #000;
+.projects-section article:hover{
+    box-shadow: rgba(255,255,255,0.5) 0px 0px 4px 4px;
 }
 
-.mankala {
-    background: #664828;
-    height: 100%;
-    width: 100%;
-    border-radius: 50%;
-    border: 6px solid #222;
-    text-align: center;
-    box-shadow: inset 0 0 7px #000;
+.hide {
+    display: none;
 }
 
-.container{
-    margin: 35% auto 0;
-  
-}
+@media screen and (min-width: 1024px){
+    .about-me {
+   
+        grid-template-columns: 1fr 1fr;
 
-.mankala .container{
-    margin: 70% auto 0;
-}
-button.turn{
-    background-color: red;
+    }
+    .profile-section {
+        border: none;
+        border-right: 1px solid #0AAAA0;
+      
+      }
+
+    .projects-section {
+      
+        grid-template-columns: 1fr 1fr;
+      }
+
+    canvas {
+        position: fixed;
+        display: grid;
+        grid-template-columns: 1fr;
+        height: 100%;
+        width: 100%;
+        z-index: -1;
+    }
 }
