--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body, html {
     padding: 0;
 }
 .highlight {
-    color: var(--main-green);
+    color: var(--main-color);
 }
 canvas {
    position: fixed;
@@ -36,13 +36,14 @@ canvas {
     grid-template-columns: 1fr;
 
    text-align: center;
-   margin: 15% 20%;
+   margin: 15% 12.5%;
     
 }
 
-.about-me{
+.about-me {
     display: grid;
     grid-template-columns: 1fr;
+   
 }
 .description{
  padding: 1.5rem;
@@ -54,8 +55,8 @@ canvas {
 }
 
 .profile-section{
-    border-bottom: 1px solid var(--main-green);
-    padding: 2.5rem;
+    border-bottom: 1px solid var(--main-color);
+    padding: 1.5rem;
 }
 
 .adjust, .about-me {
@@ -63,11 +64,15 @@ canvas {
 }
 ul{
     padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+
 }
 
 .project-btn {
     margin: 1rem auto;
-    background: var(--main-green);
+    background: var(--main-color);
     color: white;
     width: 8rem;
     padding: 1rem;
@@ -89,64 +94,75 @@ li {
 
 .fa {
     font-size: 2rem;
-    color: var(--main-green);
+    color: var(--main-color);
     margin:0 1rem;
 }
 
 .projects-section a.btn {
     text-decoration: none;
-    border: 1px solid var(--main-green);
-    color: var(--main-green);
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
 }
 
 
 
-.projects-section{
+.projects-section {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 1rem;
     margin: 2rem;
+    padding: 2rem 1rem;
+    
 }
 img{
     border: none;
 }
 .projects-section img:hover{
-    box-shadow: var(--main-green) 0px 0px 4px 4px;
+    box-shadow: var(--main-color) 0px 0px 4px 4px;
 }
 
 .hide {
     display: none;
 }
 @media screen and (min-width: 768px) {
-
-}
-    @media screen and (min-width: 768px) {
-        .about-me {
-            grid-template-columns: 1fr 1fr;
-        }
-
-        .profile-section {
-            border: none;
-            border-right: 1px solid var(--main-green);
-            padding: 0;
-            margin: 0;
-        }
-
-        .projects-section {
-            grid-template-columns: 1fr;
-        }
-
-        article {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-        }
-
-        canvas {
-            position: fixed;
-            display: grid;
-            grid-template-columns: 1fr;
-            height: 100%;
-            width: 100%;
-            z-index: -1;
-        }
+    .app {
+        position: absolute;
+        display: grid;
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin: 15% 7.5%;
     }
+    .about-me {
+        grid-template-columns: 1fr 1fr;
+    }
+    ul {
+       
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap: 0rem;
+    }
+    .profile-section {
+        border: none;
+        border-right: 1px solid var(--main-color);
+        padding: 1.5rem 0rem;
+        margin: 0;
+    }
+
+    .projects-section {
+        grid-template-columns: 1fr;
+        
+    }
+
+    article {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    canvas {
+        position: fixed;
+        display: grid;
+        grid-template-columns: 1fr;
+        height: 100%;
+        width: 100%;
+        z-index: -1;
+    }
+}
