--- a/css/styles.css
+++ b/css/styles.css
@@ -36,27 +36,29 @@ canvas {
     grid-template-columns: 1fr;
 
    text-align: center;
-   margin: 15% 12.5%;
+   margin: 10% 12.5%;
     
 }
 
 .about-me {
     display: grid;
     grid-template-columns: 1fr;
+    height: 55vh;
    
 }
 .description{
- padding: 1.5rem;
+ padding: 5rem 1.5rem;
 }
 .profile  {
     
-    height: 10rem;
-    border-radius: 50%;
+    height: 15rem;
+    border-radius: 5%;
 }
 
-.profile-section{
+.profile-section {
     border-bottom: 1px solid var(--main-color);
     padding: 1.5rem;
+    
 }
 
 .adjust, .about-me {
@@ -69,22 +71,26 @@ ul{
     grid-gap: 1rem;
 
 }
-
-.project-btn {
+.projects-header {
+    height: 30vh;
+    
+}
+a.project-btn {
     margin: 1rem auto;
     background: var(--main-color);
     color: white;
-    width: 8rem;
+    width: 12rem;
     padding: 1rem;
-    border-radius: 100%;
+ 
     text-align: center;
     cursor: pointer;
     text-decoration: none;
     font-weight: 900;
     box-shadow: 0px 2px 3px #eee ;
+    
 }
 
-.project-btn:hover{
+a.project-btn:hover{
     background: #222;
 }
 li {
@@ -102,8 +108,15 @@ li {
     text-decoration: none;
     border: 1px solid var(--main-color);
     color: var(--main-color);
+    padding:.75rem;
+    
 }
 
+    .projects-section a.btn:hover {
+        border: 1px solid var(--main-color);
+        color: #D9DADB;
+        background: var(--main-color);
+    }
 
 
 .projects-section {
@@ -111,7 +124,7 @@ li {
     grid-template-columns: 1fr;
     grid-gap: 1rem;
     margin: 2rem;
-    padding: 2rem 1rem;
+    padding: 5rem 1rem;
     
 }
 img{
@@ -142,8 +155,8 @@ img{
     }
     .profile-section {
         border: none;
-        border-right: 1px solid var(--main-color);
-        padding: 1.5rem 0rem;
+       
+        padding: 3.5rem 0rem;
         margin: 0;
     }
 
