--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ canvas {
    
 }
 .description{
- padding: 5rem 1.5rem;
+ padding: 1.5rem;
 }
 .profile  {
     
@@ -81,18 +81,19 @@ a.project-btn {
     color: white;
     width: 12rem;
     padding: 1rem;
- 
+    background: #222;
+    display: none;
     text-align: center;
     cursor: pointer;
     text-decoration: none;
     font-weight: 900;
-    box-shadow: 0px 2px 3px #eee ;
-    
+    box-shadow: 0px 2px 3px #eee;
 }
 
 a.project-btn:hover{
-    background: #222;
+    background: var(--main-color);
 }
+
 li {
     list-style: none;
     display: inline;
@@ -106,10 +107,11 @@ li {
 
 .projects-section a.btn {
     text-decoration: none;
-    border: 1px solid var(--main-color);
-    color: var(--main-color);
-    padding:.75rem;
-    
+    box-shadow: 2px 2px 1px #eee;
+    color: #eee;
+    padding: .75rem;
+    background: #222;
+   
 }
 
     .projects-section a.btn:hover {
@@ -127,13 +129,15 @@ li {
     padding: 5rem 1rem;
     
 }
-img{
-    border: none;
+.projects-section img{
+   margin: 2rem 0rem;
 }
 .projects-section img:hover{
     box-shadow: var(--main-color) 0px 0px 4px 4px;
 }
-
+.project-description{
+    padding: 2rem;
+}
 .hide {
     display: none;
 }
@@ -156,10 +160,12 @@ img{
     .profile-section {
         border: none;
        
-        padding: 3.5rem 0rem;
+        padding: 1.5rem 0rem;
         margin: 0;
     }
-
+    a.project-btn{
+        display: block;
+    }
     .projects-section {
         grid-template-columns: 1fr;
         
