--- a/css/styles.css
+++ b/css/styles.css
@@ -127,8 +127,12 @@ hr {
     padding: .5rem;
 }
 
-    .inner-footer p {
+    .inner-footer a {
         text-align: right;
+    }
+
+    .fa{
+        color: black;
     }
 @media screen and (min-width: 768px) {
     body
