--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,15 @@ ul{
 .desktop {
     display: none;
 }
+body {
+    background-image: linear-gradient(#BAD7EB, #BAD7EB);
+}
+
 main {
-    background-color: #BAD7EB;
+   /* background-color: transparent; */
+   /* background-image: linear-gradient(0deg, rgba(186,215,235, .05), rgba(0,143,220, .05)), linear-gradient(90deg, rgba(186,215,235, .05), rgba(0,143,220, .05));*/
+    height: 100%;
+    background-size: 25px 25px;
 }
 
 
@@ -106,7 +113,7 @@ main {
 
 
 hr {
-    width: 50%;
+    width: 100%;
     height: .15rem;
     background-color: #008FDC;
     border: none;
